# audioserve

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile.1  Dockerfile.alpine  Dockerfile.static  README-DOCKER-HUB.md  README.md  build_static.sh
.github/workflows/: autosync-fork.yml  publish-master-on-docker.yml  publish-on-docker.yml  publish-tag-on-docker.yml
client/: package-lock.json
crates/async-tar/: Cargo.toml
crates/async-tar/src/: lib.rs
crates/cachedirtree/src/: tree.rs
crates/file-cache/: Cargo.toml
crates/file-cache/src/: asynch.rs  error.rs  lib.rs
crates/websock/: Cargo.toml
crates/websock/examples/: echo.rs
crates/websock/src/: lib.rs
src/: main.rs  util.rs
src/services/: audio_folder.rs  audio_meta.rs  auth.rs  mod.rs  search.rs  subs.rs  types.rs
src/services/position/: mod.rs
src/services/transcode/: mod.rs
