[package]
name = "websock"
version = "0.2.0"
authors = ["Ivan <ivan.zderadicka@gmail.com>"]
edition = "2018"

[dependencies]

hyper = "0.13"
tokio = {version="0.2", features=["rt-threaded", "macros", "io-util", "fs"]}
futures = "0.3"
log = "0.4"
tokio-tungstenite = "0.10"
quick-error = "1.2"
headers = "0.3"

[dev-dependencies]
pretty_env_logger = "0.4"